{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 6,
  "lineage": "f32e226f-292e-ade7-6755-0d34ffeff94f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df7a207adb9748c7",
            "arn": "arn:aws:ec2:ap-southeast-1:817309679799:instance/i-031387e53685c476e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031387e53685c476e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Api-key-generation",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009a7449c2e2dfec8",
            "private_dns": "ip-10-0-1-91.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.91",
            "public_ip": "13.229.232.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02386c8986ecb0ca3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06ba7f99c3b6a4322"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba82a4bb12052bf5",
            "tags": {
              "Name": "Expand-network"
            },
            "tags_all": {
              "Name": "Expand-network"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06ba7f99c3b6a4322"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:loadbalancer/app/example-alb/f4b0ffe96a866162",
            "arn_suffix": "app/example-alb/f4b0ffe96a866162",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-alb-74381917.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:loadbalancer/app/example-alb/f4b0ffe96a866162",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "security_groups": [
              "sg-0a196abab1bbfefed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-078a8e647acac2c5f"
              },
              {
                "subnet_id": "subnet-0ba82a4bb12052bf5"
              }
            ],
            "subnets": [
              "subnet-078a8e647acac2c5f",
              "subnet-0ba82a4bb12052bf5"
            ],
            "vpc_id": "vpc-082d7307c5b7f973c",
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:listener/app/example-alb/f4b0ffe96a866162/d0873ff480489109",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:listener/app/example-alb/f4b0ffe96a866162/d0873ff480489109",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:loadbalancer/app/example-alb/f4b0ffe96a866162",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "example_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:targetgroup/example-target-group/941b91f5a900fd1d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:listener-rule/app/example-alb/f4b0ffe96a866162/d0873ff480489109/2a408b67deddc45d",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "*expand.network"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:listener-rule/app/example-alb/f4b0ffe96a866162/d0873ff480489109/2a408b67deddc45d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:listener/app/example-alb/f4b0ffe96a866162/d0873ff480489109",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example_alb",
            "aws_lb_listener.example_listener",
            "aws_lb_target_group.example_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:targetgroup/example-target-group/941b91f5a900fd1d",
            "arn_suffix": "targetgroup/example-target-group/941b91f5a900fd1d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:817309679799:targetgroup/example-target-group/941b91f5a900fd1d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-082d7307c5b7f973c"
          }
        }
      ]
    }
  ]
}